Fixed layout issues.
Fixed the layout to utilise the whole screen.
Also done a bit of work to tidy up the UI to make it a flow better on the page.

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,4 +1,18 @@
 /*
+ * Variables
+ */
+@navbar-color: #1b1b1b;
+@navbar-line-height: 20px; // Set in bootstrap
+@navbar-padding: 20px;
+@navbar-height: calc(~"@{navbar-line-height} + (@{navbar-padding} * 2)");
+@footer-padding: 15px;
+@footer-image: 30px;
+@footer-height: calc(~"@{footer-image} + (@{footer-padding} * 2)");
+@content-height: calc(~"100vh - (@{navbar-height} + @{footer-height})");
+
+
+
+/*
  * Base structure
  */
 html {
@@ -7,7 +21,7 @@ html {
 }
 
 body {
-    padding-bottom: 50px;
+    // padding-bottom: 50px;
     font-family: 'Roboto', sans-serif;
     background-color: #000;
     color: #aaaaaa;
@@ -46,14 +60,14 @@ a.underline {
 /*
  *  Navbar
  */
-
 .navbar {
-  background-color: #1D1E1C;
+  background-color: @navbar-color;
   margin-bottom: 0!important;
+  border: 0;
 }
 
 .navbar img {
-  padding: 20px;
+  padding: @navbar-padding;
 }
 
 .navbar-nav {
@@ -64,13 +78,19 @@ a.underline {
 .navbar-nav li {
     float: left;
     list-style: none;
-    margin: 20px;
-    ;
+    margin: @navbar-padding;
 }
 
 .navbar-nav li a {
     color: #aaa;
 }
+
+@media (min-width: 768px) {
+    .navbar {
+        border-radius: 0;
+    }
+}
+
 /*
  * Main content
  */
@@ -87,23 +107,26 @@ a.underline {
 .main .page-header {
     margin-top: 0;
 }
+
 /*
  * Footer
  */
 footer {
+    left: 0;
     position: fixed;
     bottom: 0;
     width: 100%;
-    padding: 15px;
+    padding: @footer-padding;
     text-align: center;
     color: #777;
-    background-color: #1D1E1C;
+    background-color: @navbar-color;
 }
 
 footer a,
 footer a:hover {
     color: #d0d0d0;
 }
+
 /*
  * Placeholder dashboard ideas
  */
@@ -111,12 +134,12 @@ footer a:hover {
     display: inline-block;
     border-radius: 50%;
 }
+
 /*
  * Random
  */
 .ace_editor {
     min-height: 600px;
-    margin-bottom: 15px;
 }
 
 .form-control-feedback {
@@ -138,6 +161,16 @@ footer a:hover {
 
 .border-left-none {
     border-left: none;
+}
+
+.container-fluid {
+    height: @content-height!important;
+    // padding-right: 0;
+}
+
+#editor {
+    width: 100%!important;
+    height: @content-height!important;
 }
 
 .expand-button {
@@ -296,7 +329,11 @@ h2.title {
 
 .analysis {
     background-color: #F4F5F5;
-    min-height: 1000px!important;
+    min-height: @content-height!important;
+    max-height: @content-height!important;
+    overflow-x: hidden;
+    overflow-y: auto;
+    margin-right: -15px;
 }
 
 .analysis-event {
@@ -326,7 +363,7 @@ blockquote {
 }
 
 #footer img {
-    max-height: 30px;
+    max-height: @footer-image;
 }
 
 #footer #results {
